--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
   <body>
     <table>
       <tr>
-        <td style= "width:50%;">
+        <td style= "width:85%;">
             <img class = "newappIcon" src="images/iKonnect.jpg">
         </td>
         <td>
-          <h1>iKonnect Toolchain Demo </h1>
+          <h1>iKonnect Toolchain Demo Potpotpogi </h1>
         </td>
       </tr>
     </table>
