--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
 <td style="text-align: center;" colspan="2"><img src="images/devopsikonnect.jpg" alt="iKonnect 2018"></td>
 </tr>
 <tr>
-<td style="text-align: center;" colspan="2"><img src="images/selfietoselfless-test.jpg" alt="selfie"></td>
+<td style="text-align: center;" colspan="2"><img src="images/selfietoselfless-test.jpg" alt="selfie" width="25%" height="25%"></td>
 </tr>
 </tbody>
 </table>  
